# gpui-studies

./: Cargo.toml  README.md
examples/playground/: Cargo.toml
examples/playground/src/: main.rs
examples/system-monitor/: Cargo.toml
examples/system-monitor/src/: main.rs
src/: main.rs
