[package]
name = "system-monitor"
version.workspace = true
edition.workspace = true

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
smol.workspace = true
sysinfo = "0.39.6"
battery = "0.7.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi"] }
